--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
     "swiper": "^12.1.0"
   },
   "devDependencies": {
