--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@portabletext/react": "^6.0.2",
+    "@portabletext/types": "^4.0.1",
+    "@sanity/client": "^7.14.1",
+    "@sanity/image-url": "^2.0.3",
+    "@sanity/types": "^5.7.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-sanity": "^12.0.16",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
-    "swiper": "^12.1.0"
+    "swiper": "^12.1.0",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
